--- a/Meu Notebook Google Colab (Completo).ipynb
+++ b/Meu Notebook Google Colab (Completo).ipynb
@@ -111,8 +111,7 @@
         "SNNyVy6KzowY",
         "cdO_RxQZLahB"
       ],
-      "machine_shape": "hm",
-      "include_colab_link": true
+      "machine_shape": "hm"
     },
     "kernelspec": {
       "name": "python3",
@@ -120,16 +119,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mattos12/Meu-Notebook-Google-Colab/blob/main/Meu%20Notebook%20Google%20Colab%20(Completo).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
