--- a/Meu Notebook Google Colab 2022.ipynb
+++ b/Meu Notebook Google Colab 2022.ipynb
@@ -1241,11 +1241,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "whyei9P7GIsM",
+        "id": "RnSBIXhyML7S",
         "cellView": "form"
       },
       "source": [
-        "#@markdown <center><h3>Rclone webui</h3></center><br>\n",
+        "# @markdown #### ⬅️ Clique Iniciar o Rclone Web Ui\n",
+        "#@markdown <center><h3>Rclone Web UI</h3></center><br>\n",
         "import os, signal\n",
         "import random\n",
         "import string\n",
@@ -1257,13 +1258,13 @@
         "USE_FREE_TOKEN = True  # @param {type:\"boolean\"}\n",
         "TOKEN = \"\"  # @param {type:\"string\"}\n",
         "REGION = \"SA\" #@param [\"US\", \"EU\", \"AP\", \"AU\", \"SA\", \"JP\", \"IN\"]\n",
-        "#@markdown Default <br>&emsp;username : user<br>&emsp;password : pass\n",
+        "#@markdown <h3><font color=green>Dados de Acesso:</font><h3>&emsp;Username : admin<br>&emsp;Senha : samucaturoriais\n",
         "HOME = os.path.expanduser(\"~\")\n",
         "runW = get_ipython()\n",
         "\n",
         "if not os.path.exists(f\"{HOME}/.ipython/ocr.py\"):\n",
-        "    hCode = \"https://raw.githubusercontent.com/biplobsd/\" \\\n",
-        "                \"OneClickRun/master/res/ocr.py\"\n",
+        "    hCode = \"https://raw.githubusercontent.com/Pavithran-R/\" \\\n",
+        "                \"rclone-colab/master/res/ocr.py\"\n",
         "    urllib.request.urlretrieve(hCode, f\"{HOME}/.ipython/ocr.py\")\n",
         "\n",
         "if not os.path.exists(\"/root/.ipython/rlab_utils.py\"):\n",
@@ -1300,12 +1301,13 @@
         "  os.kill(int(pid), signal.SIGTERM)\n",
         "except TypeError:\n",
         "  pass\n",
-        "cmd = \"rclone rcd --rc-web-gui --rc-addr :5572\" \\\n",
+        "cmd = \"rclone rcd --rc-web-gui --rc-addr :5586\" \\\n",
         "      \" --rc-serve\" \\\n",
-        "      \" --rc-user=user --rc-pass=pass\" \\\n",
+        "      \" --rc-user=admin --rc-pass=samucaturoriais\" \\\n",
         "      \" --rc-no-auth\" \\\n",
+        "      \" --drive-server-side-across-configs\" \\\n",
         "      rf\" --config {PATH_RClone_Config}/rclone.conf\" \\\n",
-        "      ' --user-agent \"Mozilla\"' \\\n",
+        "      ' --user-agent \"chrome\"' \\\n",
         "      ' --transfers 16' \\\n",
         "      \" &\"\n",
         "runSh(cmd, shell=True)\n",
@@ -1314,14 +1316,14 @@
         "clear_output()\n",
         "PORT_FORWARD = \"ngrok\" #@param [\"ngrok\", \"localhost\"]\n",
         "Server = PortForward_wrapper(\n",
-        "    PORT_FORWARD, TOKEN, USE_FREE_TOKEN, [['rclone', 5572, 'http'],\n",
+        "    PORT_FORWARD, TOKEN, USE_FREE_TOKEN, [['rclone', 5586, 'http'],\n",
         "                            ['filebrowser', 4000, 'http']], REGION.lower(), \n",
         "    [f\"{HOME}/.ngrok2/filebrowserRclone.yml\", 4099]\n",
         ").start('rclone', displayB=False)\n",
         "# output\n",
         "clear_output()\n",
-        "displayUrl(Server, pNamU='Rclone webUI : ', \n",
-        "           ExUrl=fr\"http://user:pass@{Server['url'][7:]}\")"
+        "displayUrl(Server, pNamU='Rclone Web UI : ', \n",
+        "           ExUrl=fr\"https://admin:samucaturoriais@{Server['url'][7:]}\")"
       ],
       "execution_count": null,
       "outputs": []
